implementation of johnzeh's playerrating

--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,12 @@
             <version>1.12.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>me.johnzeh.plugins.pr</groupId>
+            <artifactId>PlayerRating</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/PlayerRating.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
